# posters-m

./: .gitignore  README.md  main.go  manager.py  pyproject.toml
app/: models.py
poster_app/: C.py  R.py  dao.py  fast.py  init_db.py  poster.py  requirements.txt  store.py
server/: C.py  dao.py  db.py  fast.py
server/data/db/: poster.sqlite
